[project]
name = "ventilator_pdm"
version = "0.1.0"
description = "Multivariate anomaly detection for ICU ventilator telemetry (Elisa 800) — MSc thesis implementation, UiS 2026"
authors = [{name = "Erik Hafnor", email = "erikhafnor@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=15",
    "scikit-learn>=1.3",
    "torch>=2.0",
    "shap>=0.44",
    "matplotlib>=3.7",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "apscheduler>=3.10",
    "pyyaml>=6.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "openpyxl>=3.1",
    "jinja2>=3.1",
]

[project.optional-dependencies]
test = ["pytest>=7", "pytest-cov>=4", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ventilator_pdm*"]

[tool.setuptools.package-data]
"ventilator_pdm" = ["templates/*.html", "static/*.css", "static/*.js"]
